# image_duplication_finder_c

./: .gitignore  CMakeLists.txt  Image_duplication_finder_C.cpp  Image_duplication_finder_C.h  main.cpp  scan_worker.cpp  scan_worker.h  search_methods.h  style.css
